chore: enhance api get general attendance
